codepkg/objects/University__c.object
<CustomObject>
    <fields>
        <fullName>Pribyl__c</fullName>
        <formula>summ_cost__c -  summ_salary__c - summ_grand__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pribyl</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rector</label>
        <referenceTo>Worker__c</referenceTo>
        <relationshipLabel>University</relationshipLabel>
        <relationshipName>University</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>count_students__c</fullName>
        <label>count students</label>
        <summaryForeignKey>Student__c.University__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>count_workers__c</fullName>
        <label>count workers</label>
        <summaryForeignKey>Worker__c.University__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>summ_cost__c</fullName>
        <label>summ price</label>
        <summarizedField>Student__c.Price__c</summarizedField>
        <summaryForeignKey>Student__c.University__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>summ_grand__c</fullName>
        <label>summ grand</label>
        <summarizedField>Student__c.Stepuha__c</summarizedField>
        <summaryForeignKey>Student__c.University__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>summ_salary__c</fullName>
        <label>summ salary</label>
        <summarizedField>Worker__c.Salary__c</summarizedField>
        <summaryForeignKey>Worker__c.University__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>University</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>University Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>University</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>